feat: portifolio em html e css

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
       e <span id="electron-version"></span> do Electron.
     </p>
 
+    <footer><a href="portifolio.html">Meu Portifolio!</a></footer>
   </body>
 </html>
